--- a/ansible/wireguard_client/tasks/main.yml
+++ b/ansible/wireguard_client/tasks/main.yml
@@ -1,2 +1,21 @@
 ---
 # tasks file for wireguard
+- name: Requirements are installed
+  become: yes
+  apt:
+    name:
+        - wireguard
+    update_cache: yes
+
+- name: Copy template
+
+- name: Generate Private Key Client
+  become: yes
+  shell: umask 077 && wg genkey | tee /etc/wireguard/private.key
+
+- name: Generate Public Key Client
+  become: yes
+  shell: umask 077 && cat /etc/wireguard/private.key | wg pubkey | tee /etc/wireguard/public.key
+
+- name: Start wireguard
+
