--- a/ansible/wireguard_client/vars/main.yml
+++ b/ansible/wireguard_client/vars/main.yml
@@ -1,2 +1,11 @@
 ---
 # vars file for wireguard
+
+wireguard_server_ip: ""
+wireguard_server_private_key: ""
+wireguard_dns: "8.8.8.8"
+
+wireguard_client_ip: ""
+wireguard_client_public_key: ""
+wireguard_client_tunnel_ip: "10.1.0.2/30"
+wireguard_allowed_ips = "0.0.0.0/0"
