--- a/ansible/wireguard_server/tasks/main.yml
+++ b/ansible/wireguard_server/tasks/main.yml
@@ -1,2 +1,20 @@
 ---
 # tasks file for wireguard
+- name: Requirements are installed
+  become: yes
+  apt:
+    name:
+        - wireguard
+    update_cache: yes
+
+- name: Copy template
+
+ - name: Generate Private Key Server
+   become: yes
+   shell: umask 077 && wg genkey | tee /etc/wireguard/private.key
+
+ - name: Generate Public Key Server
+   become: yes
+   shell: umask 077 && cat /etc/wireguard/private.key | wg pubkey | tee /etc/wireguard/public.key
+
+- name: Start Wireguard 
