--- a/ansible/common/tasks/main.yml
+++ b/ansible/common/tasks/main.yml
@@ -14,3 +14,24 @@
         - vim
         - nmap
     update_cache: yes
+    
+- name: Make sure we have a 'wheel' group
+  group:
+    name: wheel
+    state: present
+
+- name: Allow 'wheel' group to have passwordless sudo
+  lineinfile:
+    dest: /etc/sudoers
+    state: present
+    regexp: '^%wheel'
+    line: '%wheel ALL=(ALL) NOPASSWD: ALL'
+    validate: 'visudo -cf %s'
+
+- name: Add sudoers users to wheel group
+  user:
+    name={{ username }}
+    groups=wheel
+    append=yes
+    state=present
+    createhome=yes
