--- a/ansible/docker/handlers/main.yml
+++ b/ansible/docker/handlers/main.yml
@@ -1,6 +1,7 @@
 ---
 # handlers file for docker
 - name: Restart Docker
-  service: name=docker
-  state=restarted  
+  service: 
+     name: docker
+     state: restarted  
   become: yes
